[package]
name = "metering"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rand.workspace = true
async-trait.workspace = true
backon.workspace = true
cached = { workspace = true, features = ["async", "tokio", "redis_store", "redis_tokio"] }
chrono = { workspace = true, features = ["clock", "serde"] }
chrono-tz.workspace = true
common-build-info.workspace = true
common-config.workspace = true
common-logging.workspace = true
dotenvy.workspace = true
envconfig.workspace = true
error-stack.workspace = true
futures.workspace = true
log.workspace = true
metering-grpc = { workspace = true, features = ["server"] }
meteroid-grpc = { workspace = true, features = ["client"] }
common-grpc = { workspace = true, features = ["server", "client"] }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tap.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true
tonic-health.workspace = true
tonic-reflection.workspace = true
tower = { workspace = true }
tower-layer = { workspace = true }
tower-service = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tonic-tracing-opentelemetry.workspace = true
once_cell = { workspace = true }
opentelemetry = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
common-utils = { workspace = true, features = ["error-stack-conv"] }
prost-types.workspace = true
quick_cache.workspace = true


# kafka ingest deps
kafka = { workspace = true, optional = true }
rdkafka = { workspace = true, features = ["ssl", "sasl"], optional = true }

# clickhosue connector deps
clickhouse-rs = { workspace = true, optional = true }

# openstack connector deps. Inlined
osauth = { version = "0.4.3", optional = true }
http = { version = "0.2.1", optional = true }

[[bin]]
name = "metering-api"
path = "src/bin/server.rs"

[features]
default = []
kafka = ["dep:kafka", "dep:rdkafka"]
clickhouse = ["dep:clickhouse-rs"]
openstack = ["dep:osauth", "dep:http"]