[package]
name = "openstack-adapter"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
hmac = { workspace = true }
chrono = { workspace = true, features = ["clock", "serde"] }
hex = { workspace = true }
reqwest = { workspace = true, features = ["default"] }
log = { workspace = true }
lapin = { workspace = true }
futures-lite = { workspace = true }
env_logger = { workspace = true }
envconfig.workspace = true
dotenvy.workspace = true
metering-grpc = { workspace = true, features = ["client"] }
tonic.workspace = true
common-grpc = { workspace = true, features = ["client"] }
tower = { workspace = true }
