[package]
name = "slurm-collector"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["clock", "serde"] }
env_logger = { workspace = true }
log = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
futures = { workspace = true }
futures-util = { workspace = true }
metering-grpc = { workspace = true, features = ["client"] }
tonic.workspace = true
common-grpc = { workspace = true, features = ["client"] }


[dev-dependencies]
