[package]
name = "hubspot-client"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
common-domain = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["clock", "serde"] }
reqwest = { workspace = true, features = ["default"] }
reqwest-retry = { workspace = true, features = ["default"] }
reqwest-middleware = { workspace = true, features = ["json"] }
async-trait = { workspace = true }
url = { workspace = true }
