[package]
name = "meteroid-invoicing-typst"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
bytes.workspace = true
chrono = { workspace = true, features = ["clock", "serde", "unstable-locales", "alloc"] }
fluent-static.workspace = true
fluent.workspace = true
maud.workspace = true
once_cell = { workspace = true }
reqwest = { workspace = true, features = ["default", "multipart", "blocking"] }
rust_decimal = { workspace = true }
rusty-money = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
unic-langid.workspace = true
serde_json.workspace = true
tempfile = "3.19.1"
typst = { version = "0.13.1" }
typst-pdf = { version = "0.13.1" }
tokio = { version = "1.34", features = ["full"] }
typst-as-lib = { version = "0.14.1", features = [] }
derive_typst_intoval = { version = "0.3.0", features = [] }


[build-dependencies]
fluent-static-codegen.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(trybuild)'] }

