[package]
name = "meteroid-middleware"
version = "0.1.0"
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
common-grpc = { workspace = true, features = ["server"] }
common-domain = { workspace = true }
meteroid-store = { workspace = true }

cached = { workspace = true, features = ["async", "tokio"] }
http = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tower-layer = { workspace = true }
hyper = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

uuid = { workspace = true, features = ["serde"] }
secrecy = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
tap = { workspace = true }
