[package]
name = "meteroid-oauth"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
error-stack = { workspace = true }
envconfig = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
oauth2 = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true }

[dev-dependencies]
