[package]
name = "meteroid-repository"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true, features = ["raw_value"] }
log.workspace = true
serde.workspace = true
futures.workspace = true
cornucopia_async = { workspace = true, features = ["with-serde_json-1"] }
tokio-postgres = { workspace = true, features = [
    "with-serde_json-1",
    "with-time-0_3",
    "with-uuid-1",
] }
deadpool-postgres.workspace = true
postgres-types = { workspace = true, features = ["derive"] }
uuid.workspace = true
time.workspace = true
tokio-postgres-rustls.workspace = true
rustls = { workspace = true, features = ["ring"] }
ring.workspace = true
refinery = { workspace = true, features = ["tokio-postgres"] }
error-stack.workspace = true
thiserror.workspace = true
tracing = { workspace = true }
common-repository.workspace = true

## TODO drop
lazy_static.workspace = true
regex.workspace = true


[build-dependencies]
cornucopia-build = { workspace = true }
miette = { workspace = true, features = ["fancy", "derive"] }
